--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,3 +6,7 @@ body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
+
+.text-mute {
+  @apply text-opacity-70 text-gray-500;
+}
